
2005-03-05  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	implemented OpenGL wrapper
	changed code to use new OpenGL wrapper

2005-03-01  Volker Stroebel <volker@planetpenguin.de>
	* src/configuration.*
	fixed keyhandling in configuration
	
	* src/ppgltk/font.*
	fixed windows build
		
	* src/*
	code cleanups	
	
=== ppracer 0.3.1 ===

2005-02-28  Volker Stroebel <volker@planetpenguin.de>
	* src/data/translations
	updated translations

2005-02-27  Volker Stroebel <volker@planetpenguin.de>
	* src/ppgltk/audio/audio_data.cpp src/hier_util.cpp
	  src/phys_sim.cpp src/ppgltk/textarea.cpp
	  src/credis.cpp src/hud.cpp src/quadtree.cpp
	  src/race_select.cpp src/ppgltk/listbox.cpp
	  src/callbacks.cpp src/ppgltk/label.cpp
	fixed compilation with --enable-debug
	
	* configure.in
	fixed --disable-debug

2005-02-26  Volker Stroebel <volker@planetpenguin.de>
	* src/phys_sim.cpp src/quadtree.* src/string_util.cpp 
	  src/debug.h src/textures.cpp src/ppgltk/images/png_reader.cpp
	  src/ppgltk/model.cpp src/ppgltk/model_ac.cpp
	  src/ppgltk/font.cpp src/course_quad.cpp
	several code fixes from ArKay

2005-02-24  Volker Stroebel <volker@planetpenguin.de>
	* src/game_over.cpp
	fix max speed calculation	

2005-02-18  Volker Stroebel <volker@planetpenguin.de>
	* data/translations/*
	updated translations
	
	* contrib/palettes/*
	added gimp color palettes for the terrains
	
	* configure.in
	added --with-tcl-inc and --with-tcl-lib-name

2005-02-15  Volker Stroebel <volker@planetpenguin.de>
	* src/course_load.cpp
	made hud translateable

2005-02-11  Volker Stroebel <volker@planetpenguin.de>
	* src/videoconfig.*
	added videomode autodetection (only resolutions)
	
	* src/gameconfig.*
	added x_resolution_half_width
	added disable_videomode_autodetection
	
	* src/splash_screen.*
	made label translateable and changed merged images
	
	* src/ppgltk/images/png_reader.*
	added support for grayscale and palette images
	
	*src/credits.cpp
	added translators to credits
